# mind

./: CNAME  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: command.rs  horizon.rs  information.rs  label.rs  lib.rs  main.rs  mind.rs  object.rs  point.rs  productivity.rs  reminder.rs  task.rs
src/backend/: horizon.rs  information.rs  label.rs  mod.rs  runner.rs  state.rs  storage.rs  ui.rs
src/storage/: local.rs  mod.rs
