[package]
name = "mind"
version = "0.8.0"  # Also update src/mind.rs
authors = ["Arijit Basu <sayanarijit@gmail.com>"]
edition = "2021"
description = "A productive mind has an empty stack"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sayanarijit/mind"
homepage = "https://mind.cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "mind"
path = "./src/bin/mind.rs"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.44"
serde_yaml = "0.8.21"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
toml = "0.5.8"
tui = { version = "0.16.0", default-features = false, features = ['crossterm', 'serde'] }
dirs = "4.0.0"
crossterm = "0.22.1"
tui-input = "0.1.2"
