[package]
name = "mind"
version = "0.7.4"  # Also update src/mind.rs
authors = ["Arijit Basu <sayanarijit@gmail.com>"]
edition = "2018"
description = "A productive mind has an empty stack"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sayanarijit/mind"
homepage = "https://mind.cli.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "4.0"
termion = "2.0"
chrono-humanize = "0.2.2"
atty = "0.2.14"
